--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,7 @@
   --fontFamily-sans: "Roboto", "Noto Sans JP", -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Hiragino Sans", "Noto Sans CJK JP", "Original Yu Gothic",
     "Yu Gothic", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Sans Emoji";
-  --fontFamily-serif: "Vollkorn", "Georgia", Cambria, "Times New Roman",
+  --fontFamily-serif: "Source Serif Pro", "Georgia", Cambria, "Times New Roman",
     Times, "Noto Serif JP", "Yu Mincho", "YuMincho", "Hiragino Mincho Pro", serif;
   --font-body: var(--fontFamily-sans);
   --font-heading: var(--fontFamily-serif);
