--- a/src/style.css
+++ b/src/style.css
@@ -262,19 +262,28 @@ a:focus {
 
 /* Custom classes */
 
-.global-wrapper {
+.global-header {
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
   padding: var(--spacing-10) var(--spacing-5);
 }
 
-.global-header {
-  margin-bottom: var(--spacing-12);
+.header-heading {
+  display: flex;
+  margin: 0;
+  justify-content: center;
+  font-size: var(--fontSize-7);
 }
 
-.main-heading {
-  font-size: var(--fontSize-7);
-  margin: 0;
+.header-brand {
+  height: var(--fontSize-7);
+  vertical-align: middle;
+}
+
+.global-main {
+  margin: var(--spacing-0) auto;
+  max-width: var(--maxWidth-wrapper);
+  padding: var(--spacing-0) var(--spacing-5);
 }
 
 .post-list-item {
