--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,7 @@
   --color-heading: #1a202c;
   --color-heading-black: black;
   --color-accent: #d1dce5;
+  --scrollBarWidth: calc(100vw - 100%);
 }
 
 /* HTML elements */
@@ -107,7 +108,7 @@ body {
   font-family: var(--font-body);
   font-size: var(--fontSize-1);
   color: var(--color-text);
-  width: 100vw;
+  width: calc(100vw - var(--scrollBarWidth));
 }
 
 hr {
@@ -281,7 +282,7 @@ a:focus {
   position: fixed;
   top: 0;
   padding: 12px;
-  width: 100vw;
+  width: calc(100vw - var(--scrollBarWidth));
   pointer-events: none;
   transition: opacity 0.3s, visibility 0.3s;
 }
