--- a/src/style.css
+++ b/src/style.css
@@ -53,13 +53,9 @@
   --spacing-20: 5rem;
   --spacing-24: 6rem;
   --spacing-32: 8rem;
-  --fontFamily-sans: "Roboto", "Noto Sans JP", -apple-system, BlinkMacSystemFont,
+  --font-base: "Roboto", "Noto Sans JP", -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Hiragino Sans", "Noto Sans CJK JP", "Original Yu Gothic",
     "Yu Gothic", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Sans Emoji";
-  --fontFamily-serif: "Source Serif Pro", "Georgia", Cambria, "Times New Roman",
-    Times, "Noto Serif JP", "Yu Mincho", "YuMincho", "Hiragino Mincho Pro", serif;
-  --font-body: var(--fontFamily-sans);
-  --font-heading: var(--fontFamily-serif);
   --fontWeight-normal: 400;
   --fontWeight-medium: 500;
   --fontWeight-semibold: 600;
@@ -71,6 +67,7 @@
   --lineHeight-tight: 1.1;
   --lineHeight-normal: 1.5;
   --lineHeight-relaxed: 1.625;
+  --lineHeight-loose: 2;
   /* 1.200 Minor Third Type Scale */
   --fontSize-0: 0.833rem;
   --fontSize-1: 1rem;
@@ -83,8 +80,7 @@
   --color-primary: #005b99;
   --color-text: #2e353f;
   --color-text-light: #4f5969;
-  --color-heading: #1a202c;
-  --color-heading-black: black;
+  --color-heading: #222933;
   --color-accent: #d1dce5;
   --scrollBarWidth: calc(100vw - 100%);
 }
@@ -105,7 +101,7 @@ html {
 }
 
 body {
-  font-family: var(--font-body);
+  font-family: var(--font-base);
   font-size: var(--fontSize-1);
   color: var(--color-text);
   width: calc(100vw - var(--scrollBarWidth));
@@ -125,26 +121,16 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-heading);
+  font-weight: var(--fontWeight-normal);
   margin-top: var(--spacing-12);
   margin-bottom: var(--spacing-6);
   line-height: var(--lineHeight-tight);
   letter-spacing: -0.025em;
-}
-
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: var(--fontWeight-bold);
   color: var(--color-heading);
 }
 
 h1 {
-  font-weight: var(--fontWeight-black);
   font-size: var(--fontSize-6);
-  color: var(--color-heading-black);
 }
 
 h2 {
@@ -184,7 +170,7 @@ h6 > a {
 /* Prose */
 
 p {
-  line-height: var(--lineHeight-relaxed);
+  line-height: var(--lineHeight-loose);
   --baseline-multiplier: 0.179;
   --x-height-multiplier: 0.35;
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
@@ -208,6 +194,7 @@ ol li {
 }
 
 li > p {
+  line-height: var(--lineHeight-tight);
   margin-bottom: var(--spacing-2);
 }
 
@@ -249,6 +236,10 @@ table {
 
 table thead tr th {
   border-bottom: 1px solid var(--color-accent);
+}
+
+code {
+  font-size: .9em;
 }
 
 /* Link */
@@ -322,20 +313,12 @@ a:focus {
   margin-bottom: var(--spacing-4);
 }
 
-.header-link-home {
-  font-weight: var(--fontWeight-bold);
-  font-family: var(--font-heading);
-  text-decoration: none;
-  font-size: var(--fontSize-2);
-}
-
 .blog-post header h1 {
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
 }
 
 .blog-post header p {
   font-size: var(--fontSize-2);
-  font-family: var(--font-heading);
 }
 
 .blog-post-nav ul {
