--- a/src/style.css
+++ b/src/style.css
@@ -250,18 +250,23 @@ a:focus {
 
 /* Custom classes */
 
-.header-top {
-  margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-10) var(--spacing-5);
+.global-header {
+  height: 50vh;
   display: flex;
   justify-content: center;
-  font-size: var(--fontSize-7);
+  align-items: center;
+}
+
+.header-top {
+  margin: 0;
+  max-width: var(--maxWidth-wrapper);
+  display: flex;
+  justify-content: center;
 }
 
 .header-brand {
-  height: var(--fontSize-7);
   vertical-align: middle;
+  width: 20rem;
 }
 
 .global-nav {
@@ -290,7 +295,6 @@ a:focus {
 
 .post-list-item {
   margin-bottom: var(--spacing-8);
-  margin-top: var(--spacing-8);
 }
 
 .post-list-item p {
@@ -329,5 +333,9 @@ a:focus {
 @media (max-width: 42rem) {
   blockquote {
     padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
+  }
+
+  .header-brand {
+    width: 16rem;
   }
 }
