--- a/src/style.css
+++ b/src/style.css
@@ -326,6 +326,10 @@ a:focus {
   text-align: right;
 }
 
+.post-list-item section {
+  word-break: break-word;
+}
+
 .blog-post header h1 {
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
 }
