--- a/src/style.css
+++ b/src/style.css
@@ -295,7 +295,7 @@ a:focus {
 }
 
 .global-main-top {
-  padding: 1rem 10vw;
+  padding: 5vw 10vw;
   background-color: #f8fafc;
   min-height: 50vh;
 }
@@ -304,7 +304,7 @@ a:focus {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 10vw;
-  row-gap: 5vw;
+  row-gap: 10vw;
   margin: 0;
 }
 
@@ -312,23 +312,21 @@ a:focus {
   margin-bottom: var(--spacing-8);
 }
 
-.post-list-item p {
-  margin-bottom: var(--spacing-0);
-}
-
-.post-list-item h2 {
-  font-size: var(--fontSize-4);
-  color: var(--color-primary);
-  margin-bottom: var(--spacing-2);
-  margin-top: var(--spacing-0);
-}
-
-.post-list-item header {
-  text-align: right;
+.post-list-item a {
+  text-decoration: none;
+  color: var(--color-text);
 }
 
 .post-list-item section {
   word-break: break-word;
+  padding-top: var(--spacing-4);
+}
+
+.post-list-item h2 {
+  font-size: var(--fontSize-2);
+  line-height: var(--lineHeight-normal);
+  margin-bottom: var(--spacing-2);
+  margin-top: var(--spacing-0);
 }
 
 .blog-post header h1 {
@@ -365,7 +363,7 @@ a:focus {
   }
 
   .global-main-top {
-    padding: 1rem 15vw;
+    padding: 15vw 15vw;
   }
 
   .post-list {
