Update intersection observer

--- a/src/style.css
+++ b/src/style.css
@@ -252,7 +252,7 @@ a:focus {
 /* Custom classes */
 
 .global-header {
-  position: fixed;
+  position: sticky;
   z-index: -1;
   top: 0;
   width: calc(100vw - var(--scrollBarWidth));
@@ -299,7 +299,6 @@ a:focus {
 }
 
 .global-main-top {
-  margin-top: 50vh;
   padding: 5vw 10vw;
   background-color: #f8fafc;
   min-height: 50vh;
