--- a/src/style.css
+++ b/src/style.css
@@ -350,12 +350,17 @@ a:focus {
   word-wrap: break-word;
 }
 
-.blog-post header h1 {
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
+.blog-post header {
+  text-align: center;
 }
 
-.blog-post header p {
-  font-size: var(--fontSize-2);
+.blog-post header h1 {
+  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
+  text-align: left;
+}
+
+.blog-post header time {
+  color: #999;
 }
 
 .gatsby-highlight {
