Update font family of code

--- a/src/style.css
+++ b/src/style.css
@@ -237,6 +237,7 @@ table thead tr th {
 
 code {
   font-size: .9em;
+  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", Meiryo, monospace !important;
 }
 
 /* Link */
