--- a/src/style.css
+++ b/src/style.css
@@ -356,6 +356,11 @@ a:focus {
   word-wrap: break-word;
 }
 
+.blog-post-header-image {
+  width: 100%;
+  height: 100%;
+}
+
 .blog-post header {
   text-align: center;
 }
