--- a/src/style.css
+++ b/src/style.css
@@ -353,7 +353,7 @@ a:focus {
 .blog-post {
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-5);
+  padding: var(--spacing-16) var(--spacing-5);
   word-wrap: break-word;
 }
 
