--- a/src/style.css
+++ b/src/style.css
@@ -252,6 +252,13 @@ a:focus {
   text-decoration: none;
 }
 
+/* for iOS */
+
+.gatsby-image-wrapper img,
+.gatsby-image-wrapper > div {
+  transition: opacity 500ms !important;
+}
+
 /* Custom classes */
 
 .body-top {
