--- a/src/style.css
+++ b/src/style.css
@@ -373,6 +373,14 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   stroke-dashoffset: -64px;
 }
 
+.line {
+  fill: none;
+  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+  stroke: var(--color-brand);
+  stroke-width: 7.5;
+  stroke-linecap: round;
+}
+
 .menu-nav {
   position: absolute;
   width: calc(100vw - var(--scrollBarWidth));
@@ -383,17 +391,24 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   pointer-events: initial;
   background: #fff;
   transition: opacity .5s;
 }
 
-.line {
-  fill: none;
-  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-  stroke: var(--color-brand);
-  stroke-width: 7.5;
-  stroke-linecap: round;
+.menu-nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu-nav li {
+  margin-bottom: var(--spacing-8);
+}
+
+.menu-nav img {
+  height: 2.5rem;
 }
 
 .heading-common {
