Update heading common style

--- a/src/style.css
+++ b/src/style.css
@@ -412,7 +412,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 }
 
 .heading-common {
-  width: 8rem;
+  height: 2rem;
 }
 
 .global-main {
