--- a/src/style.css
+++ b/src/style.css
@@ -623,6 +623,18 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   margin-bottom: var(--spacing-8);
 }
 
+.not-found-page {
+  text-align: center;
+  margin: var(--spacing-0) auto;
+  max-width: var(--maxWidth-wrapper);
+  padding: var(--spacing-2) var(--spacing-5);
+  word-wrap: break-word;
+}
+
+.not-found-page section {
+  margin-top: var(--spacing-4);
+}
+
 /* Media queries */
 
 @media (max-width: 100em) {
