--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,7 @@
   --maxWidth-2xl: 42rem;
   --maxWidth-3xl: 48rem;
   --maxWidth-4xl: 56rem;
+  --maxWidth-archive: 68rem;
   --maxWidth-full: "100%";
   --maxWidth-wrapper: var(--maxWidth-2xl);
   --spacing-px: "1px";
@@ -86,6 +87,7 @@
   --color-brand-transparent: rgba(34, 41, 51, 0.5);
   --color-selection: rgba(175, 192, 209, .5);
   --color-top-background: #f8fafc;
+  --thumbnail-size: 7rem;
   --scrollBarWidth: calc(100vw - 100%);
 }
 
@@ -488,6 +490,96 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   transition: opacity .5s;
 }
 
+.archive-page {
+  margin: var(--spacing-0) auto;
+  max-width: var(--maxWidth-archive);
+  padding: 5vw;
+  word-wrap: break-word;
+}
+
+.search-result-list {
+  display: grid;
+  word-break: break-word;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 4vw;
+  row-gap: 4vw;
+}
+
+.search-result-image-wrapper {
+  height: var(--thumbnail-size);
+  position: relative;
+}
+
+.search-result-image-wrapper img {
+  width: 100%;
+  border-radius: 1rem;
+  transition: opacity .5s;
+}
+
+.thumbnail-raster {
+  width: var(--thumbnail-size);
+}
+
+.thumbnail-vector-archive-space {
+  position: relative;
+  width: var(--thumbnail-size);
+  height: var(--thumbnail-size);
+  padding: 20%;
+  background: #fff;
+  border-radius: 1rem;
+}
+
+.thumbnail-vector-archive {
+  width: 100%;
+  transition: opacity .5s;
+}
+
+.search-result-item a {
+  display: flex;
+  text-decoration: none;
+  transition: opacity .2s;
+}
+
+.search-result-item a:hover{
+  opacity: .5;
+}
+
+.search-result-item section {
+  display: flex;
+  flex-direction: column;
+  margin-left: var(--spacing-4);
+}
+
+.search-result-item time {
+  margin-top: 1rem;
+  font-size: .9rem;
+  color: var(--color-text-light);
+}
+
+.search-result-item-title {
+  margin-top: var(--spacing-0);
+  margin-bottom: auto;
+  font-size: var(--fontSize-2);
+}
+
+.search-result-tag-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  font-size: .9rem;
+  color: var(--color-text-light);
+}
+
+.search-result-tag-list li {
+  margin: 0;
+}
+
+.search-result-tag-list li:not(:first-of-type)::before {
+  content: "/";
+  padding: 0 .5rem;
+}
+
 .about-page {
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
@@ -670,6 +762,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 }
 
 @media (max-width: 37.5em) {
+  :root {
+    --thumbnail-size: 5rem;
+  }
+
   blockquote {
     padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
   }
@@ -693,6 +789,19 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   .post-list {
     grid-template-columns: 1fr;
     row-gap: 10vw;
+  }
+
+  .search-result-list {
+    grid-template-columns: 1fr;
+  }
+
+  .search-result-item-title {
+    font-size: var(--fontSize-1);
+  }
+
+  .search-result-item time,
+  .search-result-tag-list {
+    font-size: .8rem;
   }
 }
 
