--- a/src/style.css
+++ b/src/style.css
@@ -493,8 +493,18 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 .archive-page {
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-archive);
-  padding: 3vw 5vw;
+  padding: var(--spacing-8) 5vw;
   word-wrap: break-word;
+}
+
+.search-area {
+  margin-bottom: var(--spacing-12);
+  text-align: center;
+}
+
+.search-area-label-tag {
+  font-size: var(--fontSize-3);
+  margin-top: 0;
 }
 
 .search-result-list {
