--- a/src/style.css
+++ b/src/style.css
@@ -524,7 +524,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 .search-button {
   margin-left: -1.3rem;
-  height: 1rem;
+  width: 1rem;
 }
 
 .search-result-list {
