--- a/src/style.css
+++ b/src/style.css
@@ -512,6 +512,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   grid-template-columns: 1fr 1fr;
   column-gap: 4vw;
   row-gap: 4vw;
+  padding: 0;
   list-style: none;
 }
 
